<resources>
    <string name="app_name">Notes</string>
    <string name="title_note">Заголовок заметки:</string>
    <string name="description_note">Описание:</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="add_note">ДОБАВИТЬ ЗАМЕТКУ</string>
    <string name="warning_fill_fields">All fields must be filled in.</string>

    <string-array name="days_of_week">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>
</resources>